...
                android:layout_width="wrap_content"
                android:layout_height="48dp" />
        </LinearLayout>


        <Button
            android:id="@+id/changeScreenFromLoginToSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="#232222"
            android:text="@string/n_o_tem_uma_conta_cadastre_se"
            android:textColor="#ffffff" />
...
